force-app/main/default/objects/agf__Retrospective__c/fields/agf__Is_Current_User_the_owner__c.field-meta.xml
<CustomField>
    <fullName>agf__Is_Current_User_the_owner__c</fullName>
    <formula>IF($User.Username = agf__User__r.Username, &#39;TRUE&#39;, &#39;FALSE&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Current User the owner</label>
    <type>Text</type>
</CustomField>