force-app/main/default/objects/agf__Retrospective__c/fields/agf__Overall_Rating_manager__c.field-meta.xml
<CustomField>
    <fullName>agf__Overall_Rating_manager__c</fullName>
    <description>Overall Rating of this employee&#39;s performance in this release as seen by the manager</description>
    <inlineHelpText>Please specify the overall rating of this employee during this release</inlineHelpText>
    <label>Overall Rating (manager)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sunny</fullName>
            </value>
            <value>
                <fullName>Partly Sunny</fullName>
            </value>
            <value>
                <fullName>Cloudy</fullName>
            </value>
            <value>
                <fullName>Rain Showers</fullName>
            </value>
            <value>
                <fullName>Blizzard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>