force-app/main/default/objects/agf__Retrospective__c/fields/agf__What_Didn_t_Go_Well_employee__c.field-meta.xml
<CustomField>
    <fullName>agf__What_Didn_t_Go_Well_employee__c</fullName>
    <description>What Didn&#39;t Go Well in this release as seen by the employee</description>
    <inlineHelpText>Please specify what did not go well in this release</inlineHelpText>
    <label>What Didn&#39;t Go Well (employee)</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>