force-app/main/default/objects/agf__Retrospective__c/fields/agf__What_Didn_t_Go_Well_manager__c.field-meta.xml
<CustomField>
    <fullName>agf__What_Didn_t_Go_Well_manager__c</fullName>
    <description>What Didn&#39;t Go Well as seen by the manager</description>
    <inlineHelpText>Please specify what did not go well in this release for this employee</inlineHelpText>
    <label>What Didn&#39;t Go Well (manager)</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>